[project]
name = "deterministic-media-metadata-generator"
version = "2.0.0"
description = "Deterministic media library generator + Wikidata metadata enricher for Obsidian"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
deezymatch = ["DeezyMatch>=1.1"]
all = ["rapidfuzz>=3.0", "DeezyMatch>=1.1"]
dev = ["pytest>=7.0", "rapidfuzz>=3.0"]

[project.scripts]
enrich-media = "enrich_media:main"
